<resources>
    <string name="app_name">Stoppy</string>

<!--  content descriptions  -->
    <string name="cd_splash_img">App logo image</string>

    <string name="cd_fab_setting">Floating button fab</string>
    <string name="cd_fab_theme">Choose Theme</string>
    <string name="cd_fab_font">Change Font</string>
    <string name="cd_fab_font_color">Change Font Color</string>
    <string name="cd_fab_bck_color">Change Background Color</string>
    <string name="cd_fab_button_style">Button Style Settings</string>


    <!--    common strings-->
<string name="default_time">00:00:00</string>


<!-- app strings-->
    <!--home page-->
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_lap">Lap</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_digitColor">Digit Color</string>
    <string name="btn_digitStyle">Font</string>
    <string name="btn_backgroundColor">Background Color</string>
    <string name="lbl_lapTitle">Time Laps</string>
    <string name="lbl_styleName">Style Name</string>
    <string name="lbl_lapSection">Your Time Laps will be seen here </string>
    <string name="item_lap_number">Lap %1$s : %2$s</string>

</resources>